[package]
name = "ar_settings"
version = "6.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
chrono = { version = "0.4", features = ["serde"]}
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }
async-trait = "0.1"

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable", "collector"]
optional = true

[dependencies.uuid]
version = "1"
features = ["v4", "fast-rng", "serde"]

[features]
default = ["serenity"]
serenity = ["dep:serenity"]